fix bug for  updateItems function
