# server/public/swagger.json
@@ -2196,7 +2196,15 @@
 				"tags": [
 					"Authorization"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"admin",
+							"editor",
+							"customer"
+						]
+					}
+				],
 				"parameters": []
 			}
 		},
@@ -2290,7 +2298,14 @@
 				"tags": [
 					"Authorization"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"admin",
+							"editor"
+						]
+					}
+				],
 				"parameters": []
 			}
 		},
